--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,8 @@
 	text-align: center;
 	font-weight: bold;
 	font-family: 'BPG Mikheil Stefane';
+	line-height: 25px;
+	letter-spacing: 1px;
 
 }
 .coffeelist {
