updated contact page

--- a/css/style.css
+++ b/css/style.css
@@ -284,3 +284,12 @@
 	color: #663300
 ;
 }
+.contactpage2 {
+	font-family: 'Croissant One';
+	font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+.contactpage22 {
+	font-family: 'Kaushan Script', cursive;
+}
