--- a/css/fonts.css
+++ b/css/fonts.css
@@ -38,3 +38,15 @@
          url('../fonts/ka-lortkipanidze-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/ka-lortkipanidze-webfont.svg#ka_lortkipanidzeregular') format('svg'); /* Legacy iOS */
 }
+
+@font-face {
+    font-family: 'Croissant One';
+    src: url('../fonts/CroissantOne-Regular.eot');
+    src: url('../fonts/CroissantOne-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CroissantOne-Regular.woff2') format('woff2'),
+        url('../fonts/CroissantOne-Regular.woff') format('woff'),
+        url('../fonts/CroissantOne-Regular.svg#CroissantOne-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
