--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,52 @@
 /*main page*/
-
-.otakhilogo {
-	width: 200px;
+.conteiner {
+	width: 100%;
 	height: 200px;
+	padding: 50px;
+	background: lightblue;
+}
+.section-wraper {
+	max-width: 1088px;
+	width: 100%;
+	margin: 0 auto;
+	height: auto;
+	display: flex;
+	flex-wrap:wrap;
+}
+.header-wrap{
+	max-width: 1088px;
+	width: 100%;
+	margin: 0 auto;
+	height: auto;
+	position: fixed;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+	background-color: beige;
+	text-shadow: 3px 6px 16px rgb(246, 73, 102);
+}
+.otakhilogo {
+	max-width: 60px;
+	width: 100%;
+	height: auto;
 	vertical-align: middle;
-	margin-top: 30px;
-	margin-right: 60px;
-	margin-left: 30px;
-
 }
 .nav {
-	display: inline-block;
-	margin-top: 30px;
+	max-width: 450px;
+	width: 100%;
+	height: auto;
 	font-family: "BPG Irubaqidze", sans-serif;
-
+}
+.fa-bars {
+	display: none;
+}
+.nav ul {
+	display: flex;
+	justify-content: space-between;
 }
 .navli {
-	display: inline-block;
-	vertical-align: middle;
-	font-size: 40px;
-	margin-right: 30px;
+	font-size: 25px;
 	font-weight: bold;
 
 }
@@ -30,78 +57,94 @@
 	color: #ff0000
 ;
 } 
-.container {
-	width: 1356px;
+
+/* finished header */
+
+/* started section1 page1 */
+
+.container2 {
+	width: 100%;
+	height: auto;
 	background-color: #ffe6ff;
 	margin-top: 45px;
 	margin-right: auto;
 	margin-left: auto;
 }
+.section-wraper2 {
+	display: flex;
+	flex-direction: column;
+}
 .h3home1 {
+	max-width: 400px;
+	width: 100%;
+	height: auto;	
+	margin-top: 20px;
+	margin-bottom: 10px;
 	font-size: 30px;
-	margin-left: 400px;
+	margin-left: 350px;
 	font-weight: bold;
 	text-align: center;
+	font-family: "BPG Irubaqidze", sans-serif;
+	text-shadow: 3px 5px 7px rgb(101, 79, 79);
 }
 .block1 {
+	max-width: 650px;
+	width: 100%;
 	margin-top: 35px;
-	margin-left: 55px;
-	display: inline-block;
+	flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+.block1 img {
+	width: 100%;
+	height: auto;
+	border-radius: 22px;
+	margin-bottom: 20px;
+	box-shadow: -7px -8px 15px rgb(143, 2, 2);
+
+}
+.block1 h3 {
+	margin-bottom: 40px;
+	font-size: 25px;
+	color: #ff0000;
+	text-shadow: 2px 3px 3px rgb(96, 12, 12);
 }
 
-.h3block1 {
-	margin-left: 250px;
-	margin-bottom: 20px;
-	font-size: 25px;
-	color: #ff0000;
-	text-align: center;
-}
-.welcome1 {
-	width: 650px;
-	height: 450px;
-	vertical-align: middle;
-	margin-right: 70px;
-	text-align: center;
-}
-.welcome2 {
-	width: 810px;
-	height: 600px;
-	vertical-align: middle;
-	margin-right: 17px;
-	margin-bottom: 35px;
-	text-align: center;
-}
-.p1block1 {
-	width: 450px;
-	display: inline-block;
-	vertical-align: middle;
+.block1 p {
+	max-width: 400px;
+	width: 100%;
+	height: auto;
 	font-size: 22px;
 	font-style: italic;
 	text-align: center;
 	font-weight: bold;
-	text-align: center;
+	text-shadow: 3px 5px 7px rgb(101, 79, 79);
+
 }
+
+/* finished block1 */
+/* block2 */
 .block2 {
-	margin-top: 60px;
-	margin-left: 110px;
+	margin-top: 30px;
+	margin-left: 370px;
 }
-.h3block2 {
+.block2 img {
+	box-shadow: 7px 8px 15px rgb(143, 2, 2);
+}
+.block2 h3 {
+	max-width: 500px;
+	width: 100%;
+	height: auto;
 	margin-bottom: 25px;
-	margin-left: 70px;
 	font-size: 25px;
-	font-weight: bold;
 	color: #ff0000;
-	text-align: center;
-}
-.p2block2 {
-	width: 350px;
-	display: inline-block;
-	font-size: 22px;
 	font-weight: bold;
-	vertical-align: middle;
-	font-style: italic;
-	text-align: center;
+	text-shadow: 2px 3px 3px rgb(96, 12, 12);
 }
+
+/* finished section1 page1 */
+
 .footer {
 	width: 1356px;
 	margin-top: 55px;
