--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,25 @@
     width: 100%;
     height: auto;
   }
+  .section-wraper2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .block2 {
+    margin-left: 0;
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+  }
+  .block1 img {
+    border-radius: 45px 5px;
+  }
+  .h3home1 {
+    margin-left: 0;
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
 }
 @media (max-width:850px) {
   .nav {
@@ -14,7 +33,45 @@
     display: inline-block;
     font-size: 25px;
   }
-  /* .section-wraper {
-    align-items: center;
-  } */
+  .block1 {
+    max-width: 400px;
+    width: 100%;
+  }
+}
+@media (max-width:480px) { 
+  .block1 {
+    max-width: 300px;
+    width: 100%;
+    font-size: 18px;
+  }
+  .block1 img {
+    border-radius: 5px 45px;
+  }
+  .h3home1 {
+    font-size: 22px;
+  }
+  .block1 h3 {
+    font-size: 18px;
+  }
+  .block1 p {
+    font-size: 16px;
+
+  }
+}
+@media (max-width:320px) { 
+  .block1 {
+    max-width: 200px;
+    width: 100%;
+    font-size: 18px;
+  }
+  .h3home1 {
+    font-size: 19px;
+  }
+  .block1 h3 {
+    font-size: 15px;
+  }
+  .block1 p {
+    font-size: 14px;
+
+  }
 }
