--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,6 @@
 	width: 100%;
 	height: auto;
 	background-color: #ffe6ff;
-	margin-right: auto;
-	margin-left: auto;
 }
 .section-wraper2 {
 	display: flex;
@@ -144,31 +142,33 @@
 
 /* finished section1 page1 */
 
+/* footer */
+
 .footer {
-	width: 1356px;
-	margin-top: 55px;
-	margin-right: auto;
-	margin-left: auto;
+	padding-top: 55px;
+	vertical-align: baseline;
 }
-.footerimage1 {
-	width: 110px;
-	height: 110px;
-	display: inline-block;
+.footer footer1 {
+	max-width: 60px;
+	width: 100%;
+	height: auto;
 }
-.divider {
-	width: 3px;
-	height: 110px;
+.footer1 img {
+	max-width: 60px;
+	width: 100%;
+	height: auto;
+	border-radius: 70px;
+}
+.footer1:nth-child(1)::after {
+	content: " ";
+	width: 0.2px;
+	height: 60px;
+	border-style: solid;
 	background-color: black;
 	display: inline-block;
-	margin-left: 70px;
-	margin-right: 70px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
-.footerimage2 {
-	width: 110px;
-	height: 110px;
-	display: inline-block;
-}
-
 
 /* start of a menu page */
 
