--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,6 +36,12 @@
     max-width: 400px;
     width: 100%;
   }
+  .footer1-1 {
+    justify-content: center;
+  }
+  .footer1-2 {
+    max-width: 200px;
+  }
 }
 @media (max-width:480px) { 
   .block1 {
@@ -56,6 +62,18 @@
     font-size: 16px;
 
   }
+  .footer1-2 {
+    max-width: 200px;
+    justify-content: space-between;
+  }
+  .footer1:nth-child(1)::after {
+    margin-left: 20px;
+    margin-right: 0;
+  }
+  .footer1 {
+    max-width: 100px;
+    width: 100%;
+  }
 }
 @media (max-width:320px) { 
   .block1 {
@@ -71,7 +89,27 @@
   }
   .block1 p {
     font-size: 14px;
+  }
+  .footer1-2 {
+    max-width: 200px;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .footer1:nth-child(1)::after {
+    margin-left: 12px;
+    margin-right: 0;
+  }
+  .footer1 {
+    flex-direction: row;
+    max-width: 80px;
+    width: 100%;
+    height: auto;
+  }
 
+  .footer1 img {
+    max-width: 60px;
+    width: 100%;
+    height: auto;
   }
 }
 
