--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 /*main page*/
+body {
+	background-color: #ffe6ff;
+}
 .conteiner {
 	width: 100%;
 	height: 200px;
 	padding: 50px;
-	background: lightblue;
+	/* background: lightblue; */
 }
 .section-wraper {
 	max-width: 1088px;
@@ -23,7 +26,7 @@
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
-	background-color: beige;
+	/* background-color: beige; */
 	text-shadow: 3px 6px 16px rgb(246, 73, 102);
 }
 .otakhilogo {
@@ -31,6 +34,8 @@
 	width: 100%;
 	height: auto;
 	vertical-align: middle;
+	border-radius: 50px;
+	box-shadow: 5px 7px 20px rgb(244, 49, 81);
 }
 .nav {
 	max-width: 450px;
@@ -144,8 +149,18 @@
 
 /* footer */
 
-.footer {
+.footer1-1 {
 	padding-top: 55px;
+	flex-wrap: wrap;
+	/* background-color: aqua; */
+}
+.footer1-2 {
+	max-width: 300px;
+	width: 100%;
+	height: auto;
+	/* background-color: lightcyan; */
+	display: flex;
+	flex-wrap: wrap;
 	vertical-align: baseline;
 }
 .footer footer1 {
@@ -158,6 +173,7 @@
 	width: 100%;
 	height: auto;
 	border-radius: 70px;
+	box-shadow: 5px 7px 20px rgb(244, 49, 81);
 }
 .footer1:nth-child(1)::after {
 	content: " ";
@@ -166,7 +182,7 @@
 	border-style: solid;
 	background-color: black;
 	display: inline-block;
-	margin-left: 40px;
+	margin-left: 30px;
 	margin-right: 40px;
 }
 
