--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,12 @@
+@media (max-width:1080px) {
+  .menu1-2 img {
+    transform: translateX(0);
+  }
+  .menu1-1 p {
+    transform: translateX(0);
+    margin-top: 50px;
+  }
+}
 @media (max-width:1024px) {
   .header-wrap {
     max-width: 900px;
@@ -23,8 +32,16 @@
     margin-top: 50px;
     margin-bottom: 100px;
   }
+  .menu1-1 h3 {
+    max-width: 600px;
+    text-align: center;
+  }
 }
 @media (max-width:850px) {
+  .header-wrap {
+    max-width: 600px;
+    /* justify-content: space-between; */
+  }
   .nav {
     display: none;
   }
@@ -42,7 +59,34 @@
   .footer1-2 {
     max-width: 200px;
   }
+  .menu1-1 img {
+    max-width: 600px;
+    margin-bottom: 50px;
+  }
+  .menu1-1 h3 {
+    max-width: 600px;
+    text-align: center;
+    font-size: 25px;
+  }
+
 }
+
+@media (max-width:730px) {
+  .menu1-1 img {
+    max-width: 450px;
+    /* margin-bottom: 50px; */
+  }
+  .menu1-1 h3 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width:660px) {
+  .header-wrap {
+    max-width: 400px;
+  }
+}
+
 @media (max-width:480px) { 
   .block1 {
     max-width: 300px;
@@ -73,6 +117,21 @@
   .footer1 {
     max-width: 100px;
     width: 100%;
+  }
+  .menu1-1 img {
+    max-width: 300px;
+    /* margin-bottom: 50px; */
+  }
+  .menu1-1 h3 {
+    font-size: 16px;
+  }
+  .header-wrap {
+    max-width: 280px;
+  }
+}
+@media (max-width:360px) {
+  .header-wrap {
+    max-width: 200px;
   }
 }
 @media (max-width:320px) { 
@@ -110,6 +169,16 @@
     max-width: 60px;
     width: 100%;
     height: auto;
+  }
+  .menu1-1 img {
+    max-width: 200px;
+    /* margin-bottom: 50px; */
+  }
+  .menu1-1 h3 {
+    font-size: 14px;
+  }
+  .menu1-1 p {
+    font-size: 12px;
   }
 }
 
