--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 	position: fixed;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	/* background-color: beige; */
 	text-shadow: 3px 6px 16px rgb(246, 73, 102);
@@ -237,6 +237,10 @@ body {
 	margin-left: 30px;
 	margin-right: 0;
 	box-shadow: 7px 8px 15px rgb(143, 2, 2);
+	transform: translateX(40%);
+}
+.menu1-2 p {
+	transform: translateX(-260%);
 }
 
 
