updated section2 menu page

--- a/css/style.css
+++ b/css/style.css
@@ -247,76 +247,78 @@ body {
 
 
 
-.coffee {
-	width: 800px;
-	height: 550px;
-	vertical-align: middle;
-	/*full versiom 
-	margin-top: 27px;
-	margin-right: 50px;
-	margin-bottom: 50px;
-	margin-left: 50px;
-	*/
-	margin: 27px 50px 50px 50px ;
-}
-.p2coffee {
-	width:400px;
-	font-size: 20px;
-	display: inline-block;
-	vertical-align: middle;
+
+
+
+
+/* section 2-1 menu page */
+
+.coffee1-1 {
+	width: 100%;
+	height: auto;
+	display: flex;
 	text-align: center;
-	font-weight: bold;
-	font-family: 'BPG Mikheil Stefane';
-	line-height: 25px;
-	letter-spacing: 1px;
+	justify-content: center;
+	margin-top: 20px;
+	margin-bottom: 50px;
+	text-shadow: -7px -8px 15px rgb(81, 71, 71);
 
 }
-.coffeelist {
-	font-size: 18px;
-	text-align: center;
-}
-.box1menu {
-	width: 350px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	margin-left: 200px;
-	font-size: 18px;
-	display: inline-block;
-	vertical-align: middle;
-	text-align: center;
-	font-weight: bold;
-}
-.englishmenu {
+.english-menu {
+	max-width: 400px;
+	width: 100%;
 	font-family: 'Pacifico';
 	line-height: 35px;
 }
 .georgianmenu {
+	max-width: 400px;
+	width: 100%;
+	height: auto;
 	font-family: 'BPG Nuskha Modern';
 	line-height: 35px;
 }
-.Khilamushi {
-	width: 600px;
-	height: 470px;
-	vertical-align: middle;
-	/* full version 
-	margin-top: 27px;
-	margin-left: 50px;
-	margin-right: 50px;
-	margin-bottom: 50px;
-	*/
-	margin: 27px 50px 50px 50px;
+
+/* section 2-2 menu page */
+
+.khilamushi1-1 {
+	width: 100%;
+	display: flex;
+	height: auto;
+	flex-direction: column;
+	align-items: center;
 }
-.pkhilamushi {
-	width: 400px;
+.khilamushi1-1 img{
+	max-width: 800px;
+	width: 100%;
+	border-radius: 65px 25px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	transform: translate(-15%);
+}
+.khilamushi1-1 h3 {
+	max-width: 1000px;
+	width: 100%;
 	font-size: 20px;
-	display: inline-block;
-	vertical-align: middle;
+	font-family: "BPG Mikheil Stefane", sans-serif;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 20px;
+	text-shadow: -7px -8px 15px rgb(81, 71, 71);
+
+}
+.khilamushi1-1 p {
+	max-width: 850px;
+	width: 100%;
+	font-size: 22px;
 	text-align: center;
 	font-weight: bold;
 	line-height: 20px;
-	font-family: 'Kaushan Script', cursive;
 	line-height: 35px;
+	font-family: 'Kaushan Script', cursive;
+	text-shadow: -7px -8px 15px rgb(81, 71, 71);
+
 }
+
 .tea {
 	width: 700px;
 	height: 550px;
