--- a/css/style.css
+++ b/css/style.css
@@ -319,24 +319,28 @@ body {
 
 }
 
+/*  section 3 menu page */
+
+.tea-section {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.tea-section img {
+	max-width: 600px;
+	width: 100%;
+}
 .tea {
 	width: 700px;
 	height: 550px;
 	vertical-align: middle;
-/* full version
-	margin-top: 27px;
-	margin-left: 50px;
-	margin-right: 50px;
-	margin-bottom: 50px;
-	*/
-	margin: 27px 50px 50px 50px;
+	/* margin: 27px 50px 50px 50px; */
 }
 .tea1 {
-	width: 400px;
+	max-width: 300px;
 	font-size: 18px;
-	margin-left: 50px;
-	display: inline-block;
-	vertical-align: middle;
+	/* margin-left: 50px; */
 	text-align: center;
 	font-family: 'BPG Mikheil Stefane';
 	font-weight: bold;
