--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,6 +6,27 @@
     transform: translateX(0);
     margin-top: 50px;
   }
+  .khilamushi1-1 h3 {
+    max-width: 700px;
+  }
+  .khilamushi1-1 img {
+    max-width: 650px;
+    margin-left: 180px;
+  }
+  .khilamushi1-1 p {
+    max-width: 700px;
+  }
+  .tea1 img {
+    transform: translateX(0);
+  }
+  .tea1 p {
+    transform: translateX(0);
+    margin-top: 50px;
+  }
+  .tea1 {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 @media (max-width:1024px) {
   .header-wrap {
@@ -40,14 +61,14 @@
 @media (max-width:850px) {
   .header-wrap {
     max-width: 600px;
-    /* justify-content: space-between; */
+    justify-content: space-between;
   }
   .nav {
     display: none;
   }
   .fa-bars {
     display: inline-block;
-    font-size: 25px;
+    font-size: 22px;
   }
   .block1 {
     max-width: 400px;
@@ -68,13 +89,27 @@
     text-align: center;
     font-size: 25px;
   }
+  .khilamushi1-1 h3 {
+    max-width: 500px;
+  }
+  .khilamushi1-1 img {
+    max-width: 450px;
+  }
+  .khilamushi1-1 p {
+    max-width: 500px;
+  }
 
+  .tea1 h3 {
+    max-width: 500px;
+  }
+  .tea1 img {
+    max-width: 450px;
+  }
 }
 
 @media (max-width:730px) {
   .menu1-1 img {
     max-width: 450px;
-    /* margin-bottom: 50px; */
   }
   .menu1-1 h3 {
     font-size: 20px;
@@ -83,7 +118,37 @@
 
 @media (max-width:660px) {
   .header-wrap {
-    max-width: 400px;
+    max-width: 450px;
+  }
+  .khilamushi1-1 h3 {
+    max-width: 350px;
+    font-size: 20px;
+  }
+  .khilamushi1-1 img {
+    max-width: 330px;
+  }
+  .tea1 img {
+    max-width: 330px;
+  }
+  .khilamushi1-1 p {
+    max-width: 350px;
+    font-size: 16px;
+  }
+  .tea1 h3 {
+    max-width: 350px;
+    font-size: 22px;
+  }
+  .menu1-1 h3 {
+    font-size: 18px;
+  }
+  .menu1-2 h3 {
+    max-width: 500px;
+  }
+  .menu1-2 p {
+    font-size: 16px;
+  }
+  .menu-list {
+    font-size: 14px;
   }
 }
 
@@ -120,7 +185,7 @@
   }
   .menu1-1 img {
     max-width: 300px;
-    /* margin-bottom: 50px; */
+    margin-left: -20px;
   }
   .menu1-1 h3 {
     font-size: 16px;
@@ -128,7 +193,47 @@
   .header-wrap {
     max-width: 280px;
   }
+  .khilamushi1-1 h3 {
+    max-width: 250px;
+    font-size: 17px;
+  }
+  .khilamushi1-1 img {
+    max-width: 250px;
+    margin-left: 50px;
+  }
+  .tea1 img {
+    max-width: 250px;
+  }
+  .khilamushi1-1 p {
+    max-width: 250px;
+    font-size: 14px;
+  }
+  .tea1 h3 {
+    max-width: 250px;
+    font-size: 18px;
+    margin-left: 20px;
+  }
+  .tea1 p {
+    font-size: 14px;
+  }
+  .menu-list {
+    font-size: 11px;
+  }
+  .menu-list2 {
+    max-width: 300px;
+  }
+  .menu1-1 h3 {
+    max-width: 300px;
+    font-size: 17px;
+  }
+  .menu1-2 h3 {
+    max-width: 300px;
+    font-size: 14px;
+
+  }
 }
+
+
 @media (max-width:360px) {
   .header-wrap {
     max-width: 200px;
@@ -164,7 +269,6 @@
     width: 100%;
     height: auto;
   }
-
   .footer1 img {
     max-width: 60px;
     width: 100%;
@@ -179,6 +283,45 @@
   }
   .menu1-1 p {
     font-size: 12px;
+  }
+  .khilamushi1-1 h3 {
+    max-width: 250px;
+    font-size: 16px;
+  }
+  .khilamushi1-1 img {
+    max-width: 250px;
+    margin-left: 50px;
+  }
+  .tea1 img {
+    max-width: 250px;
+  }
+  .khilamushi1-1 p {
+    max-width: 250px;
+    font-size: 14px;
+  }
+  .tea1 h3 {
+    max-width: 250px;
+    font-size: 18px;
+    margin-left: 20px;
+  }
+  .tea1 p {
+    max-width: 250px;
+    font-size: 13px;
+  }
+  .menu-list {
+    font-size: 11px;
+  }
+  .menu-list2 {
+    max-width: 150px;
+  }
+  .menu1-1 h3 {
+    max-width: 250px;
+    font-size: 14px;
+  }
+  .menu1-2 h3 {
+    max-width: 250px;
+    font-size: 12px;
+
   }
 }
 
