--- a/css/style.css
+++ b/css/style.css
@@ -45,15 +45,18 @@ body {
 }
 .fa-bars {
 	display: none;
+	font-size: 25px;
 }
-.nav ul {
+.nav-ul {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
+	font-size: 25px;
+	font-weight: bold;
 }
 .navli {
 	font-size: 25px;
 	font-weight: bold;
-
 }
 .color {
 	color: #cc00cc;
@@ -284,6 +287,7 @@ body {
 	width: 100%;
 	display: flex;
 	height: auto;
+	flex-wrap: wrap;
 	flex-direction: column;
 	align-items: center;
 }
