--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,9 @@
+/* resolution on 1080px */
+
 @media (max-width:1080px) {
+  .header-wrap {
+    max-width: 900px;
+  }
   .menu1-2 img {
     transform: translateX(0);
   }
@@ -28,11 +33,12 @@
     align-items: center;
   }
 }
+
+/* resolution on 1024px */
+
 @media (max-width:1024px) {
   .header-wrap {
-    max-width: 900px;
-    width: 100%;
-    height: auto;
+    max-width: 800px;
   }
   .section-wraper2 {
     display: flex;
@@ -58,13 +64,12 @@
     text-align: center;
   }
 }
+
+/* resolution on 850px */
+
 @media (max-width:850px) {
   .header-wrap {
     max-width: 600px;
-    justify-content: space-between;
-  }
-  .nav {
-    display: none;
   }
   .fa-bars {
     display: inline-block;
@@ -107,6 +112,8 @@
   }
 }
 
+/* resolution on 730px */
+
 @media (max-width:730px) {
   .menu1-1 img {
     max-width: 450px;
@@ -116,9 +123,16 @@
   }
 }
 
+/* resolution on 660px */
+
+
 @media (max-width:660px) {
   .header-wrap {
-    max-width: 450px;
+    max-width: 500px;
+    font-size: 16px;
+  }
+  .nav-nav {
+    max-width: 300px;
   }
   .khilamushi1-1 h3 {
     max-width: 350px;
@@ -152,7 +166,15 @@
   }
 }
 
+/* resolution on 480px */
+
 @media (max-width:480px) { 
+  .header-wrap img {
+    max-width: 40px;
+  }
+  .nav-nav {
+    max-width: 200px;
+  }
   .block1 {
     max-width: 300px;
     width: 100%;
@@ -234,11 +256,21 @@
 }
 
 
+/* resolution on 360px */ 
+
+
+
 @media (max-width:360px) {
   .header-wrap {
     max-width: 200px;
   }
+  .header-wrap img {
+    margin-bottom: 20px;
+    margin-left: 70px;}
 }
+
+/* resolution on 320px */
+
 @media (max-width:320px) { 
   .block1 {
     max-width: 200px;
@@ -276,7 +308,6 @@
   }
   .menu1-1 img {
     max-width: 200px;
-    /* margin-bottom: 50px; */
   }
   .menu1-1 h3 {
     font-size: 14px;
@@ -324,4 +355,3 @@
 
   }
 }
-
