--- a/css/responsive.css
+++ b/css/responsive.css
@@ -164,6 +164,17 @@
   .menu-list {
     font-size: 14px;
   }
+  .contact-wraper h3 {
+    max-width: 350px;
+    font-size: 23px;
+  }
+  .contact-wraper img {
+    max-width: 450px;
+  }
+  .contact {
+    max-width: 300px;
+    margin-left: 0;
+  }
 }
 
 /* resolution on 480px */
@@ -253,6 +264,17 @@
     font-size: 14px;
 
   }
+  .contact-wraper h3 {
+    max-width: 250px;
+    font-size: 20px;
+  }
+  .contact-wraper img {
+    max-width: 350px;
+    box-shadow: 14px 8px 25px #cc00cc;
+    }
+  .contact {
+    max-width: 250px;
+  }
 }
 
 
@@ -267,6 +289,24 @@
   .header-wrap img {
     margin-bottom: 20px;
     margin-left: 70px;}
+    .contact-wraper h3 {
+      max-width: 220px;
+      font-size: 16px;
+    }
+    .contact-wraper img {
+      max-width: 250px;
+    }
+    .contact {
+      max-width: 180px;
+      /* font-size: 13px; */
+    }
+    .contact h3 {
+      margin-bottom: 40px;
+      line-height: 30px;
+    }
+    .contact-li {
+      font-size: 14px;
+    }
 }
 
 /* resolution on 320px */
