--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* resolution on 1080px */
 
 @media (max-width:1080px) {
@@ -5,10 +12,14 @@
     max-width: 900px;
   }
   .menu1-2 img {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
   .menu1-1 p {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
     margin-top: 50px;
   }
   .khilamushi1-1 h3 {
@@ -22,15 +33,24 @@
     max-width: 700px;
   }
   .tea1 img {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
   .tea1 p {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
     margin-top: 50px;
   }
   .tea1 {
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -41,9 +61,16 @@
     max-width: 800px;
   }
   .section-wraper2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .block2 {
     margin-left: 0;
@@ -80,7 +107,9 @@
     width: 100%;
   }
   .footer1-1 {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer1-2 {
     max-width: 200px;
@@ -206,7 +235,9 @@
   }
   .footer1-2 {
     max-width: 200px;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .footer1:nth-child(1)::after {
     margin-left: 20px;
@@ -270,7 +301,8 @@
   }
   .contact-wraper img {
     max-width: 350px;
-    box-shadow: 14px 8px 25px #cc00cc;
+    -webkit-box-shadow: 14px 8px 25px #cc00cc;
+            box-shadow: 14px 8px 25px #cc00cc;
     }
   .contact {
     max-width: 250px;
@@ -329,14 +361,18 @@
   .footer1-2 {
     max-width: 200px;
     width: 100%;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .footer1:nth-child(1)::after {
     margin-left: 12px;
     margin-right: 0;
   }
   .footer1 {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     max-width: 80px;
     width: 100%;
     height: auto;
@@ -395,3 +431,7 @@
 
   }
 }
+
+/* minified responsive.css */
+
+/* @media (max-width:1080px){.header-wrap{max-width:900px}.menu1-2 img,.tea1 img{-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}.menu1-1 p,.tea1 p{-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0);margin-top:50px}.khilamushi1-1 h3,.khilamushi1-1 p{max-width:700px}.khilamushi1-1 img{max-width:650px;margin-left:180px}.tea1{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}}@media (max-width:1024px){.block2,.h3home1{margin-left:0;margin-bottom:100px}.header-wrap{max-width:800px}.section-wraper2{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.block2{margin-top:100px}.block1 img{border-radius:45px 5px}.h3home1{margin-top:50px}.menu1-1 h3{max-width:600px;text-align:center}}@media (max-width:850px){.header-wrap,.menu1-1 h3,.menu1-1 img{max-width:600px}.fa-bars{display:inline-block;font-size:22px}.block1{max-width:400px;width:100%}.footer1-1{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.footer1-2{max-width:200px}.menu1-1 img{margin-bottom:50px}.menu1-1 h3{text-align:center;font-size:25px}.khilamushi1-1 h3,.khilamushi1-1 p,.tea1 h3{max-width:500px}.khilamushi1-1 img,.tea1 img{max-width:450px}}@media (max-width:730px){.menu1-1 img{max-width:450px}.menu1-1 h3{font-size:20px}}@media (max-width:660px){.header-wrap{max-width:500px;font-size:16px}.contact,.nav-nav{max-width:300px}.khilamushi1-1 h3{max-width:350px;font-size:20px}.khilamushi1-1 img,.tea1 img{max-width:330px}.khilamushi1-1 p{max-width:350px;font-size:16px}.tea1 h3{max-width:350px;font-size:22px}.menu1-1 h3{font-size:18px}.menu1-2 h3{max-width:500px}.menu1-2 p{font-size:16px}.menu-list{font-size:14px}.contact-wraper h3{max-width:350px;font-size:23px}.contact-wraper img{max-width:450px}.contact{margin-left:0}}@media (max-width:480px){.block1,.block1 h3{font-size:18px}.header-wrap img{max-width:40px}.nav-nav{max-width:200px}.block1{max-width:300px;width:100%}.block1 img{border-radius:5px 45px}.h3home1{font-size:22px}.block1 p{font-size:16px}.footer1-2{max-width:200px;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.footer1:first-child::after{margin-left:20px;margin-right:0}.footer1{max-width:100px;width:100%}.menu1-1 img{max-width:300px;margin-left:-20px}.header-wrap{max-width:280px}.contact,.khilamushi1-1 h3,.khilamushi1-1 p,.tea1 h3,.tea1 img{max-width:250px}.khilamushi1-1 h3{font-size:17px}.khilamushi1-1 img{max-width:250px;margin-left:50px}.khilamushi1-1 p{font-size:14px}.tea1 h3{font-size:18px;margin-left:20px}.menu-list2,.menu1-1 h3,.menu1-2 h3{max-width:300px}.tea1 p{font-size:14px}.menu-list{font-size:11px}.menu1-1 h3{font-size:17px}.menu1-2 h3{font-size:14px}.contact-wraper h3{max-width:250px;font-size:20px}.contact-wraper img{max-width:350px;-webkit-box-shadow:14px 8px 25px #c0c;box-shadow:14px 8px 25px #c0c}}@media (max-width:360px){.header-wrap{max-width:200px}.header-wrap img{margin-bottom:20px;margin-left:70px}.contact-wraper h3{max-width:220px;font-size:16px}.contact-wraper img{max-width:250px}.contact{max-width:180px}.contact h3{margin-bottom:40px;line-height:30px}.contact-li{font-size:14px}}@media (max-width:320px){.footer1,.footer1 img{width:100%;height:auto}.block1{max-width:200px;width:100%;font-size:18px}.h3home1{font-size:19px}.block1 h3{font-size:15px}.block1 p{font-size:14px}.footer1-2{max-width:200px;width:100%;-ms-flex-pack:distribute;justify-content:space-around}.footer1:first-child::after{margin-left:12px;margin-right:0}.footer1{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;max-width:80px}.footer1 img{max-width:60px}.menu1-1 img{max-width:200px}.khilamushi1-1 h3,.khilamushi1-1 img,.menu1-2 h3,.tea1 h3,.tea1 img,.tea1 p{max-width:250px}.menu1-1 p{font-size:12px}.khilamushi1-1 h3{font-size:16px}.khilamushi1-1 img{margin-left:50px}.khilamushi1-1 p,.menu1-1 h3{max-width:250px;font-size:14px}.tea1 h3{font-size:18px;margin-left:20px}.tea1 p{font-size:13px}.menu-list{font-size:11px}.menu-list2{max-width:150px}.menu1-2 h3{font-size:12px}} */
