--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
 
 /*
 * Prefixed by https://autoprefixer.github.io
@@ -193,6 +187,7 @@ body {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	justify-content: space-between;
 	-ms-flex-wrap: wrap;
 	    flex-wrap: wrap;
 	vertical-align: baseline;
@@ -212,13 +207,12 @@ body {
 }
 .footer1:nth-child(1)::after {
 	content: " ";
-	width: 0.2px;
+	width: 2px;
 	height: 60px;
-	border-style: solid;
+	/* border-style: solid; */
 	background-color: black;
 	display: inline-block;
-	margin-left: 30px;
-	margin-right: 40px;
+	margin-left: 87px;
 }
 
 /* start of a menu page */
